--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chair": "0.0.0",
     "drei": "0.0.60",
     "lodash": "^4.17.19",
+    "pattern.css": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
